# fsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fsm.c  fsm.h
example/: CMakeLists.txt  README.md  example.c  main.c
